# RegexLearning

./: CMakeLists.txt  READEME.md  README.md  vcpkg.json
res/: StyleSheet.qrc  homeWnd.qrc  json.qrc  res.qrc  style.ini  style.qss  style_Debug.ini
res/data/: TopicInfo.json  TopicInfo_new.json  TopicInfo_old.json  about.md  cheatSheet.json  homePage.md  my.py  srcInfo.json  topicDescription.qrc
res/data/topic_description/: 1.md  15.md  18.md  2.md
res/qss/: cheatSheetWnd.qss  homeWnd.qss  mainwindow.qss  practiceWnd.qss  regexTestWnd.qss
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/page/aboutWnd/: AboutWindow.cpp  AboutWindow.ui
src/page/cheatSheetWnd/: CheatSheetWindow.cpp  CheatSheetWindow.h  CheatSheetWindow.ui  ToolPage.cpp  ToolPage.h  ToolPage.ui
src/page/homeWnd/: HomeWindow.cpp  HomeWindow.h  HomeWindow.ui
src/page/practiceWnd/: MatchTextDisplay.cpp  MatchTextDisplay.h  RegexPracWindow.cpp  RegexPracWindow.h  RegexPracWindow.ui  TopicListWidget.cpp  TopicListWidget.h
src/page/regexTestWnd/: RegexTestWindow.cpp  RegexTestWindow.h  RegexTestWindow.ui
src/tool/: TopicInfo.cpp  TopicInfo.h  helperFunc.cpp  helperFunc.h
